--- a/style.css
+++ b/style.css
@@ -7,16 +7,17 @@
 
 .main {
 	background-color: hsl(212, 45%, 89%);
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	min-height: 100vh;
 }
 
+.main,
 .card-qr-code {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.card-qr-code {
 	background-color: hsl(0, 0%, 100%);
 	flex-direction: column;
 	width: 320px;
